[tool.poetry]
name = "todo-test-2-db"
version = "0.1.0"
description = ""
authors = ["goodgay897 <119532864+goodgay897@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "todo_test_2_db"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
